--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<title>Love Brudge - ISTP유형의 소시오닉스 궁합</title>
+<title>Love Bridge - ISTP유형의 소시오닉스 궁합</title>
   <title>Evernote Export</title>
   
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
