--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>&nbsp;</p>
     </div>
 <div style="text-align:center;"><br/></div><div style="text-align:center;"><br/></div>    <div style="text-align:center;">
-<a href="https://mbtimatch.github.io/socionics/"><span style="font-size:12pt;">홈으로 이동</span></a></div>
+<a href="https://mbtimatch.github.io/socionics/"><span style="font-size:12pt;"><font color="black">홈으로 이동</font></span></a></div>
 <div><div><a href="https://mbtimatch.github.io/socionics/"><br/></a></div><hr/>                <div>
 <span style="font-size: 16pt;"><span style="font-size: 16pt; color: rgb(93, 218, 255); font-family: THE렛츠스마일R;">ISTP유형의 소시오닉스 관계 궁합 및 상성</span></span></div>
         <div>
